--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,54 @@
 <footer>
+  <div class="container">
+    <div class="row logo-and-menu-container">
+      <div class="col-md">
+        <div class="logo-container">
+          <%= image_tag "fantasy-pro-tour-logo-white.png", class: "logo" %>
+        </div>
+      </div>
+      <div class="col-md">
+        <div class="row">
+          <div class="col-sm">
+            <div class="">
+              <ul>
+                <li>
+                  How It Works
+                </li>
+                <li>
+                  Start A League
+                </li>
+                <li>
+                  Wizards of the Coast
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-sm">
+            <div class="">
+              <ul>
+                <li>
+                  Sign In
+                </li>
+                <li>
+                  Blog
+                </li>
+                <li>
+                  Contact Us
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
   <div class="container copyright-notice-container">
-    Powered by Hipsters of the Coast  &copy; <%= Date.today.year %>. Magic: the Gathering and the Pro Tour are copyrights of Wizards of the Coast.
+    <p>
+      Powered by Hipsters of the Coast &copy; <%= Date.today.year %>.
+    </p>
+    <p>
+      Magic: the Gathering is a copyright of Wizards of the Coast.
+    </p>
   </div>
 </footer>
