--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,12 +21,14 @@ html {
   margin: 0;
   padding: 0;
   height: 100%;
-  background: $blue;
+  background: $black;
+  overflow-x: hidden;
   body {
     font-size: 16px;
+    font-weight: 300;
     min-height: 100%;
     position: relative;
-    padding-bottom: 60px;
+    padding-bottom: 495px;
     background: $white;
     #content {
       margin: 0;
@@ -53,25 +55,90 @@ html {
      position: absolute;
      bottom: 0;
      width: 100%;
-     height: 60px;
-     background: $blue;
+     // height: 60px;
+     background: $black;
      color: $white;
+     font-weight: 100;
      text-align: center;
-     border-top: 1px solid $gray-100;
+     font-size: 1rem;
+     // border-top: 1px solid $gray-100;
+     .logo-container {
+       text-align: center;
+       padding-bottom: 1rem;
+       .logo {
+         width: 100%;
+         height: auto;
+       }
+     }
      .copyright-notice-container {
-       padding: 1rem;
-      }
+       padding: 0 2rem 2rem;
+       p {
+         &:last-child {
+           margin-bottom: 0;
+         }
+       }
+     }
+     .logo-and-menu-container {
+       padding: 4rem 2rem;
+       align-items: center;
+       ul {
+         margin: 0;
+         list-style: none;
+         text-align: center;
+       }
+     }
     }
   }
 }
 
 .tertiary-font {
-  font-family: "marvin_visions", "Raleway", sans-serif;
+  font-family: "marvin_visions", "Roboto", sans-serif;
   letter-spacing: 2px;
 }
 
 form {
   .control-label {
     font-weight: bold;
+  }
+}
+
+@media (min-width: 576px) {
+  html {
+    body {
+      padding-bottom: 416px;
+      footer {
+        .logo-and-menu-container {
+          ul {
+            text-align: left;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 768px) {
+  html {
+    body {
+      padding-bottom: 300px;
+      footer {
+       .logo-container {
+         text-align: right;
+         padding-bottom: 0;
+         .logo {
+           width: 80%;
+         }
+       }
+       .logo-and-menu-container {
+         padding: 4rem 2rem;
+         align-items: center;
+         ul {
+           margin: 0;
+           list-style: none;
+           text-align: left;
+         }
+       }
+      }
+    }
   }
 }
