--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -6,13 +6,17 @@ $gray-400: #ced4da;
 $gray-500: #adb5bd;
 $gray-600: #868e96;
 $gray-700: #495057;
-$gray-800: #343a40;
+// $gray-800: #343a40;
+$gray-800: #343434;
 $gray-900: #212529;
-$black:    #000;
+// $black:    #000;
+$black:    #191919;
+
 
 $blue:    #4582EC;
 $indigo:  #6610f2;
-$purple:  #6f42c1;
+// $purple:  #6f42c1;
+$purple:  #453c77;
 $pink:    #e83e8c;
 $red:     #d9534f;
 $orange:  #fd7e14;
@@ -21,14 +25,14 @@ $green:   #02B875;
 $teal:    #20c997;
 $cyan:    #17a2b8;
 
-$primary:       $blue;
+$primary:       $purple;
 $secondary:     $gray-500;
 $success:       $green;
 $info:          $cyan;
 $warning:       $yellow;
 $danger:        $red;
 $light:         $gray-100;
-$dark:          $gray-800;
+$dark:          $black;
 
 // Body
 
@@ -72,7 +76,7 @@ $badge-padding-x:                   1.2em;
 
 // Variables ===================================================================
 
-$font-family-sans-serif: "Raleway", sans-serif;
+$font-family-sans-serif: "Roboto", sans-serif;
 $font-family-serif:      Georgia, Cambria, "Times New Roman", Times, serif;
 
 // Navbar ======================================================================
