--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -73,6 +73,22 @@
     }
     &.third {
       text-align: center;
+      .subscribe {
+        font-size: 1rem;
+      }
+      .form-group {
+        padding-top: 2rem;
+        input {
+          display: inline-block;
+          width: 50%;
+          vertical-align: middle;
+          margin-right: 1rem;
+        }
+        button {
+          font-size: 1rem;
+          padding: 0.5rem 1.1rem;
+        }
+      }
     }
     .cta-container {
       font-size: 0px;
