--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -4,26 +4,20 @@
   border-radius: 0px;
   border: none;
   margin: 0;
+  width: 100%;
+  z-index: 1;
   &.home {
     background: none !important;
     position: absolute;
-    width: 100%;
-    z-index: 1;
-    .navbar-brand {
-      padding-left: 1rem;
-      .logo {
-        width: 250px;
-        height: auto;
-      }
-    }
-    .navbar-collapse {
-      padding-right: 1rem;
-    }
+
     .navbar-nav {
       .nav-link {
       color: white;
       }
     }
+  }
+  .navbar-collapse {
+    padding-right: 1rem;
   }
   .navbar-brand {
     color: $white;
@@ -31,6 +25,11 @@
     font-family: "marvin_visions", "Roboto", sans-serif;
     font-size: 1.9em;
     letter-spacing: 1px;
+    padding-left: 1rem;
+    .logo {
+      width: 250px;
+      height: auto;
+    }
     &:hover {
       color: $white;
     }
@@ -38,6 +37,25 @@
   .navbar-toggle {
     .icon-bar {
       background-color: #FFF;
+    }
+  }
+}
+
+@media (max-width: 380px) {
+  .navbar {
+    &.home {
+      .navbar-brand {
+        padding-left: 0;
+        .logo {
+          width: 195px;
+        }
+      }
+    }
+    .navbar-brand {
+      padding-left: 0;
+      .logo {
+        width: 195px;
+      }
     }
   }
 }
