--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -5,20 +5,8 @@
   </button>
   <div class="collapse navbar-collapse pull-left" id="navbarNavDropdown">
     <ul class="navbar-nav ml-auto">
-      <% if current_user && !current_user.drafts.where("start_time < ? AND completed = ?", Time.now, false).length.zero? %>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Now Drafting
-          </a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-            <% current_user.drafts.where("start_time < ? AND completed = ?", Time.now, false).each do |draft| %>
-              <%= link_to draft.league.leagueable.name, game_competition_league_draft_path(draft.league.leagueable.game, draft.league.leagueable, draft.league, draft), class: "dropdown-item" %>
-            <% end %>
-          </div>
-        </li>
-      <% end %>
       <li class="nav-item">
-        <%= link_to "Start a League", game_competitions_path(Game.find_by(name: "Magic: the Gathering")), class: "nav-link" %>
+        <%= link_to "How It Works", game_competitions_path(Game.find_by(name: "Magic: the Gathering")), class: "nav-link" %>
       </li>
       <% if current_user %>
         <li class="nav-item dropdown">
@@ -29,6 +17,15 @@
             <%= link_to "Your Leagues", user_leagues_path, class: "dropdown-item" %>
             <%= link_to "Profile", user_path(current_user), class: "dropdown-item" %>
             <%= link_to "Sign Out", destroy_user_session_path, method: "delete", class: "dropdown-item" %>
+            <div class="dropdown-divider"></div>
+            <div class="dropdown-item p-4 text-warning" style="padding-top:0.25rem !important; padding-bottom:0.25rem !important">
+                Drafting Now:
+            </div>
+            <% if current_user && !current_user.drafts.where("start_time < ? AND completed = ?", Time.now, false).length.zero? %>
+              <% current_user.drafts.where("start_time < ? AND completed = ?", Time.now, false).each do |draft| %>
+                <%= link_to draft.league.leagueable.name, game_competition_league_draft_path(draft.league.leagueable.game, draft.league.leagueable, draft.league, draft), class: "dropdown-item" %>
+              <% end %>
+            <% end %>
           </div>
         </li>
       <% else %>
