--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -82,7 +82,7 @@
             <div class="cta-text-container">
               <h3>The best fantasy stats for Magic: the Gathering</h3>
               <p>
-                Choose the best players for your team with our advanced metrics, including average pick positions and Elo ratings.
+                Choose the best players for your team with our advanced metrics.
               </p>
               <p>
                 Our dataset includes every Pro Tour from the Team Series era and is rapidly expanding.
