--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,7 +11,7 @@
               Invite your friends and draft your favorite Magic pros to compete in your own Fantasy Pro Tour league! It's completely free!
             </p>
             <p>
-              <%= link_to "Create a League", new_user_session_path, class: "btn btn-dark" %>
+              <%= link_to "Create a League", new_user_registration_path, class: "btn btn-dark" %>
             </p>
           </div>
         </div>
@@ -62,8 +62,8 @@
           <div class="col-md">
             <div class="cta-text-container homepage-actions">
               <p>
-                <%= link_to "Create a League", new_user_session_path, class: "btn btn-lg btn-primary" %>
-                <%= link_to "Join a League", new_user_session_path, class: "btn btn-lg btn-dark" %>
+                <%= link_to "Create a League", new_user_registration_path, class: "btn btn-lg btn-primary" %>
+                <%= link_to "How It Works", faq_path, class: "btn btn-lg btn-dark" %>
               </p>
             </div>
           </div>
