--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -12,7 +12,7 @@
             <div class="">
               <ul>
                 <li>
-                  How It Works
+                  <%= link_to "How It Works", faq_path %>
                 </li>
                 <li>
                   <%= link_to "Start A League", game_competitions_path(Game.find_by_name("Magic: the Gathering")) %>
