--- a/app/views/users/leagues.html.erb
+++ b/app/views/users/leagues.html.erb
@@ -1,8 +1,10 @@
 <div class="row">
   <div class="col-md-8 offset-md-2">
     <h1>Your Active Leagues</h1>
-
-    <% if current_user.leagues.where(leagueable_type: "Competition").joins("LEFT JOIN competitions ON competitions.id = leagues.leagueable_id").where("competitions.date > ?", Date.today - 60.days).length > 0 %>
+    <p>
+      <%= link_to "Create a League", game_competitions_path(Game.find_by_name("Magic: the Gathering")), class: "btn btn-sm btn-primary" %>
+    </p>
+    <% if current_user.leagues.where(leagueable_type: "Competition").joins("LEFT JOIN competitions ON competitions.id = leagues.leagueable_id").where("competitions.date > ?", Date.today - 7.days).length > 0 %>
       <table class="table table-bordered table-hover">
         <thead>
           <tr>
@@ -48,9 +50,6 @@
     <% else %>
       <p>
         You don't have any active leagues.
-      </p>
-      <p>
-        <%= link_to "Create a new league!", game_competitions_path(Game.find_by_name("Magic: the Gathering")), class: "btn btn-primary" %>
       </p>
     <% end %>
 
