--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,7 +35,7 @@ html {
       width: 100%;
       position: relative;
       .container-fluid {
-        margin-top: 1rem;
+        margin: 1rem 0;
       }
       .page-title {
         text-align: center;
