invites bug fixes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -98,6 +98,10 @@ html {
   }
 }
 
+.errors {
+  color: $red;
+}
+
 .tertiary-font {
   font-family: "marvin_visions", "Roboto", sans-serif;
   letter-spacing: 2px;
