--- a/app/views/invites/show.html.erb
+++ b/app/views/invites/show.html.erb
@@ -9,6 +9,17 @@
         Please create an account to accept this invitation and join the league!
       </p>
 
+      <% if @password_message || @password_confirmation_message %>
+        <div class="errors">
+          <p>
+            <%= @password_message %>
+          </p>
+          <p>
+            <%= @password_confirmation_message %>
+          </p>
+        </div>
+      <% end %>
+
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= devise_error_messages! %>
 
@@ -19,7 +30,7 @@
 
         <div class="form-group required">
           <%= f.label :email, class: "control-label" %>
-          <%= f.email_field :email, required: true, class: "form-control" %>
+          <%= f.email_field :email, required: true, value: @invite.email, class: "form-control" %>
         </div>
 
         <div class="form-group required">
@@ -27,12 +38,12 @@
           <% if @minimum_password_length %>
           <em>(<%= @minimum_password_length %> characters minimum)</em>
           <% end %>
-          <%= f.password_field :password, autocomplete: "off", required: true, class: "form-control" %>
+          <%= f.password_field :password, autocomplete: "off", required: true, class: "form-control #{@password_message ? 'is-invalid' : nil}" %>
         </div>
 
         <div class="form-group required">
           <%= f.label :password_confirmation, "Password Confirmation", class: "control-label" %>
-          <%= f.password_field :password_confirmation, autocomplete: "off", required: true, class: "form-control" %>
+          <%= f.password_field :password_confirmation, autocomplete: "off", required: true, class: "form-control #{@password_confirmation_message ? 'is-invalid' : nil}" %>
         </div>
 
         <div class="actions">
