--- a/app/views/competitions/index.html.erb
+++ b/app/views/competitions/index.html.erb
@@ -7,7 +7,7 @@
       </p>
     </div>
     <div>
-      <% if @competitions.where("date >= ?", Date.today).length > 0 %>
+      <% if @competitions.where("date >= ?", Time.now).length > 0 %>
         <table class="table table-bordered table-hover">
           <thead>
             <tr>
@@ -23,7 +23,7 @@
             </tr>
           </thead>
           <tbody>
-            <% @competitions.where("date >= ?", Date.today).each do |competition| %>
+            <% @competitions.where("date >= ?", Time.now).each do |competition| %>
               <tr>
                 <td>
                   <%= competition.name %>
