added ability to add results for team pts

--- a/app/views/results/new.html.erb
+++ b/app/views/results/new.html.erb
@@ -8,10 +8,27 @@
     <p>
       The .csv of event results must be in the following format: <em>place, name, points</em>
     </p>
+    <h4>Individual PT Import</h4>
     <%= form_tag game_competition_results_import_path(@game, @competition), multipart: true do %>
       <div class="form-group required">
         <%= label_tag :file, "File", class: "control-label" %>
         <%= file_field_tag :file, type: :file, accept: ".csv", required: true, class: "form-control" %>
+      </div>
+
+      <%= submit_tag "Add Results", class: "btn btn-primary" %>
+
+    <% end %>
+
+    <h4>Team PT Import</h4>
+    <%= form_tag game_competition_results_team_import_path(@game, @competition), multipart: true do %>
+      <div class="form-group required">
+        <%= label_tag :teams_file, "Teams File", class: "control-label" %>
+        <%= file_field_tag :teams_file, type: :file, accept: ".csv", required: true, class: "form-control" %>
+      </div>
+
+      <div class="form-group required">
+        <%= label_tag :results_file, "Results File", class: "control-label" %>
+        <%= file_field_tag :results_file, type: :file, accept: ".csv", required: true, class: "form-control" %>
       </div>
 
       <%= submit_tag "Add Results", class: "btn btn-primary" %>
