--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -14,6 +14,11 @@
             <th>
               Points
             </th>
+            <% if current_user&.admin? %>
+              <th>
+
+              </th>
+            <% end %>
           </tr>
         </thead>
         <tbody>
@@ -28,6 +33,11 @@
               <td>
                 <%= result.points %>
               </td>
+              <% if current_user&.admin? %>
+                <td>
+                  <%= link_to "Edit", edit_game_competition_result_path(@game, @competition, result), class: "btn btn-sm btn-primary" %>
+                </td>
+              <% end %>
             </tr>
           <% end %>
         </tbody>
