--- a/app/assets/stylesheets/drafts.scss
+++ b/app/assets/stylesheets/drafts.scss
@@ -127,6 +127,15 @@
   }
 }
 
+.remove-player-link {
+  background-color: red;
+  border-color: red;
+  &:hover {
+    background-color: darken(red, 5%);
+    border-color: darken(red, 5%);
+  }
+}
+
 .star-link {
   background-color: white;
   border-color: gold;
