--- a/app/views/admin/competitions/new.html.erb
+++ b/app/views/admin/competitions/new.html.erb
@@ -1,7 +1,12 @@
 <div class="row">
   <div class="col-md-8 offset-md-2">
-    <h2><%= @competition.name %></h2>
-    <%= form_for [@game, @competition] do |f| %>
+    <h1>Create New Competition</h1>
+
+    <%= form_for @competition, url: admin_competitions_path do |f| %>
+      <div class="form-group required">
+        <%= f.label :game_id, "Game",  class: "control-label" %>
+        <%= select_tag "competition[game_id]", options_from_collection_for_select(Game.all.reverse, 'id', 'name'), include_blank: "Select Game", required: true, class: "form-control" %>
+      </div>
       <div class="form-group required">
         <%= f.label :name, class: "control-label" %>
         <%= f.text_field :name, required: true, class: "form-control" %>
@@ -18,12 +23,8 @@
         <%= f.label :location, class: "control-label" %>
         <%= f.text_field :location, required: true, class: "form-control" %>
       </div>
-      <div class="form-group required">
-        <%= f.label :score_as_of_round, "Score as of Round", class: "control-label" %>
-        <%= f.number_field :score_as_of_round, required: true, class: "form-control" %>
-      </div>
       <div class="actions">
-        <%= f.submit "Update", class: "btn btn-primary" %>
+        <%= f.submit "Create Competition", class: "btn btn-primary" %>
       </div>
     <% end %>
   </div>
