--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,12 +1,15 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary <%= 'home' if current_page?(root_path) %>">
-  <a class="navbar-brand" href="<%= root_url %>"><%= image_tag "fantasy-pro-tour-logo-white.png", class: "logo" %></a>
+  <a class="navbar-brand" href="<%= root_url %>"><%= image_tag 'fantasy-pro-tour-logo-white.png', class: "logo" %></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse pull-left" id="navbarNavDropdown">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <%= link_to "How It Works", faq_path, class: "nav-link" %>
+        <%= link_to 'Draft Now', game_competitions_path(Game.find_by_name('Magic: the Gathering')), class: 'nav-link' %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'How It Works', faq_path, class: 'nav-link' %>
       </li>
       <% if current_user %>
         <li class="nav-item dropdown">
@@ -14,24 +17,25 @@
             <%= current_user.name %>
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-            <%= link_to "Your Leagues", user_leagues_path, class: "dropdown-item" %>
-            <%= link_to "Create League", game_competitions_path(Game.find_by_name("Magic: the Gathering")), class: "dropdown-item" %>
-            <%= link_to "Profile", user_path(current_user), class: "dropdown-item" %>
-            <%= link_to "Sign Out", destroy_user_session_path, method: "delete", class: "dropdown-item" %>
-            <% if current_user && !current_user.drafts.where("start_time < ? AND completed = ?", Time.now, false).length.zero? %>
+            <%= link_to 'Admin Panel', admin_root_path, class: 'dropdown-item' if current_user.admin %>
+            <%= link_to 'Your Leagues', user_leagues_path, class: 'dropdown-item' %>
+            <%= link_to 'Create League', game_competitions_path(Game.find_by_name('Magic: the Gathering')), class: 'dropdown-item' %>
+            <%= link_to 'Profile', user_path(current_user), class: 'dropdown-item' %>
+            <%= link_to 'Sign Out', destroy_user_session_path, method: 'delete', class: 'dropdown-item' %>
+            <% if current_user && !current_user.drafts.where('start_time < ? AND completed = ?', Time.now, false).length.zero? %>
               <div class="dropdown-divider"></div>
               <div class="dropdown-item p-4 text-warning" style="padding-top:0.25rem !important; padding-bottom:0.25rem !important">
                 Drafting Now:
               </div>
-              <% current_user.drafts.where("start_time < ? AND completed = ?", Time.now, false).each do |draft| %>
-                <%= link_to draft.league.leagueable.name, game_competition_league_draft_path(draft.league.leagueable.game, draft.league.leagueable, draft.league, draft), class: "dropdown-item" %>
+              <% current_user.drafts.where('start_time < ? AND completed = ?', Time.now, false).each do |draft| %>
+                <%= link_to draft.league.leagueable.name, game_competition_league_draft_path(draft.league.leagueable.game, draft.league.leagueable, draft.league, draft), class: 'dropdown-item' %>
               <% end %>
             <% end %>
           </div>
         </li>
       <% else %>
         <li class="nav-item">
-          <%= link_to "Sign In", new_user_session_path, class: "nav-link" %>
+          <%= link_to 'Sign In', new_user_session_path, class: 'nav-link' %>
         </li>
       <% end %>
     </ul>
