--- a/app/views/leagues/new.html.erb
+++ b/app/views/leagues/new.html.erb
@@ -14,6 +14,11 @@
     <%= form_for [@competition.game, @competition, @league] do |f| %>
 
       <div class="form-group required">
+        <%= f.label :draft_type, "Draft Type", class: "control-label" %>
+        <%= select_tag "league[draft_type]", options_for_select([["Snake", "snake"], ["Pick X", "pick_x"], ["Pick 'Em", "pick_em"]], params[:draft_type]), required: true, include_blank: "Select Draft Type", class: "form-control" %>
+      </div>
+
+      <div class="form-group required">
         <%= f.label :num_draft_rounds, "Number of Rounds", class: "control-label" %>
         <%= f.number_field :num_draft_rounds, min: 1, max: 12, required: true, class: "form-control" %>
       </div>
