--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -6,7 +6,7 @@
   <div class="collapse navbar-collapse pull-left" id="navbarNavDropdown">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <%= link_to 'Draft Now', game_competitions_path(Game.find_by_name('Magic: the Gathering')), class: 'nav-link' %>
+        <%= link_to "Draft Now", game_competitions_path(Game.find_by_name('Magic: the Gathering')), class: 'nav-link' %>
       </li>
       <li class="nav-item">
         <%= link_to 'How It Works', faq_path, class: 'nav-link' %>
